@@ -311,11 +311,13 @@
 	"apihelp-protect-param-pageid": "{{doc-apihelp-param|protect|pageid}}",
 	"apihelp-protect-param-protections": "{{doc-apihelp-param|protect|protections}}",
 	"apihelp-protect-param-expiry": "{{doc-apihelp-param|protect|expiry}}",
+	"apihelp-protect-param-baselogid": "{{doc-apihelp-param|protect|baselogid}}",
 	"apihelp-protect-param-reason": "{{doc-apihelp-param|protect|reason}}",
 	"apihelp-protect-param-cascade": "{{doc-apihelp-param|protect|cascade}}",
 	"apihelp-protect-param-watch": "{{doc-apihelp-param|protect|watch}}",
 	"apihelp-protect-param-watchlist": "{{doc-apihelp-param|protect|watchlist}}",
 	"apihelp-protect-example-protect": "{{doc-apihelp-example|protect}}",
+	"apihelp-protect-example-protect-baselogid": "{{doc-apihelp-example|protect}}",
 	"apihelp-protect-example-unprotect": "{{doc-apihelp-example|protect}}",
 	"apihelp-protect-example-unprotect2": "{{doc-apihelp-example|protect}}",
 	"apihelp-purge-description": "{{doc-apihelp-description|purge}}",
